# mviz

./: LICENSE  README.md  pyproject.toml
mouseviz/: __main__.py  utils.py  viz.py
